--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header>
         <h1>Discover hidden places in the world around you</h1>
-        <a href="#">Download Excursion (Coming soon)</a>
+        <p></p><a href="#">Download Excursion (Coming soon)</a></p>
     </header>
-    
+    <video autoplay loop>
+        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
