--- a/index.html
+++ b/index.html
@@ -5,15 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excursion</title>
-    <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+    <link href="resources/css/style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <h1>Discover hidden places in the world around you</h1>
-        <p></p><a href="#">Download Excursion (Coming soon)</a></p>
-    </header>
-    <video autoplay loop>
-        <source src="./resources/videos/excursion.mp4" type="video/mp4">
+    
+    <h1 class="header-main">Discover hidden places in the world around you</h1>
+    <p></p><a class="link-cta" href="#">Download Excursion (Coming soon)</a></p>
+    <video autoplay loop controls>
+        <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
+    <h1>Your personal travel guide</h1>
+    <p>Excursion remembers places you like, and recommends new points of interest in you</p>
+    <img src="./resources/images/camp.webp" alt="tentes">
+    <p><img src="./resources/images/phone.png" alt="tel"></p>
+    <h1>Coming soon for Iphone and Android</h1>
+    <p></p><a class="link-cta" href="#">Download Excursion (Coming soon)</a></p>
+    <footer>
+        <h3>Excursion</h3>
+    </footer>
 </body>
 </html>
