--- a/index.html
+++ b/index.html
@@ -9,19 +9,31 @@
 </head>
 <body>
     
-    <h1 class="header-main">Discover hidden places in the world around you</h1>
-    <p></p><a class="link-cta" href="#">Download Excursion (Coming soon)</a></p>
-    <video autoplay loop controls>
-        <source src="resources/videos/excursion.mp4" type="video/mp4">
+    <!-- Landing section -->
+
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
     </video>
-    <h1>Your personal travel guide</h1>
-    <p>Excursion remembers places you like, and recommends new points of interest in you</p>
-    <img src="./resources/images/camp.webp" alt="tentes">
-    <p><img src="./resources/images/phone.png" alt="tel"></p>
-    <h1>Coming soon for Iphone and Android</h1>
-    <p></p><a class="link-cta" href="#">Download Excursion (Coming soon)</a></p>
-    <footer>
-        <h3>Excursion</h3>
-    </footer>
+
+    <!-- Information Section -->
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/images/camp.webp"></p>
+
+    <!-- Coming Soon Section -->
+
+    <p><img class="app" src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+    <!-- Footer -->
+    
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
+
 </body>
 </html>
